fixed small markup error on profile, improved css spacing for the whole page.

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -34,7 +34,7 @@ a:hover {
 
 
 #content {
-	padding: 23px 25px 50px;
+	padding: 1.5em 2em;
 	background: #FFF url(/images/wrapper_bottom.gif) bottom left no-repeat;
 }
 
